objects/xDO_MDC_customListRecord__c.object
<CustomObject>
    <fields>
        <fullName>Column_1_Value__c</fullName>
        <label>Column 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_2_Value__c</fullName>
        <label>Column 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_3_Value__c</fullName>
        <label>Column 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <label>Related Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Related List Record</label>
    <nameField>
        <label>Custom Related List Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Related List Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>